Bid is now working

--- a/bestbid/bidding/templates/base.html
+++ b/bestbid/bidding/templates/base.html
@@ -23,7 +23,7 @@
 		<!-- Custom CSS File -->
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-		{% block head %}
+		{% block title %}
 			<title>Error</title>
 		{% endblock %}
 
