--- a/bestbid/bidding/templates/bidding/login.html
+++ b/bestbid/bidding/templates/bidding/login.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		{% block head %}
+		{% block title %}
 			<title>Login | BestBid.com</title>
 		{% endblock %}
 	</head>
