--- a/bestbid/bidding/templates/bidding/search.html
+++ b/bestbid/bidding/templates/bidding/search.html
@@ -5,7 +5,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		{% block head %}
+		{% block title %}
 			{% if search_results %}
 				<title>{{ query }} | BestBid.com</title>
 			{% elif no_results %}
