--- a/bestbid/bidding/templates/bidding/change_password.html
+++ b/bestbid/bidding/templates/bidding/change_password.html
@@ -5,7 +5,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		{% block head %}
+		{% block title %}
 			<title>Change Password | BestBid.com</title>
 
 			<script src="{% static 'jquery/verify_password.js' %}"></script>
