--- a/bestbid/bidding/templates/bidding/home.html
+++ b/bestbid/bidding/templates/bidding/home.html
@@ -5,7 +5,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		{% block head %}
+		{% block title %}
 			<title>Home | BestBid.com</title>
 		{% endblock %}
 	</head>
